FST-59: Added delete kafka topic method (#94)
* MODELINKS-87: Added delete kafka topic method

* MODELINKS-87: Added logging to the new method

* MODELINKS-87: Some improvements made